# structural_index_codebases

./: README.md  license
constructing_index/construct_pathindex/: CMakeLists.txt  graph.cpp  index.cpp  index.h  main.cpp  pathset.cpp  pathset.h  run.sh  utility.h
constructing_index/construct_pathindex/index/: robots_2_path
constructing_index/construct_pathindex/result/: test
constructing_index/construct_structuralindex/: CMakeLists.txt  graph.cpp  graph.h  index.cpp  index.h  kbisimulation.cpp  kbisimulation.h  main.cpp  utility.h
constructing_index/construct_structuralindex/index/: robots_2MG_workload_h2p  robots_2MG_workload_l2h  robots_2_h2p  robots_2_l2h
constructing_index/construct_structuralindex/result/: test
constructing_index/construct_wapathindex/: CMakeLists.txt  graph.cpp  index.cpp  index.h  main.cpp  pathset.cpp  pathset.h  utility.h  workload.cpp  workload.h
constructing_index/construct_wapathindex/index/: robots_2_wa_workload_path
constructing_index/construct_wapathindex/result/: test
constructing_index/construct_wastructuralindex/: CMakeLists.txt  graph.h  index.cpp  index.h  main.cpp  run.sh  utility.h  workload.cpp  workloadaware_transequivalent.cpp  workloadaware_transequivalent.h
constructing_index/construct_wastructuralindex/index/: robots_2_wa_workloadMW_workload_h2p  robots_2_wa_workloadMW_workload_l2h  robots_2_wa_workload_h2p  robots_2_wa_workload_l2h
constructing_index/construct_wastructuralindex/result/: test
data/: robots.edge
query_processing/query_bfs/: CMakeLists.txt  graph.cpp  graph.h  main.cpp  query.cpp  query.h  run.sh  utility.h
query_processing/query_pathindex/: index.h  (+7 more)
workload/: query_fulllabel4k1  query_fulllabel4k2  query_fulllabel4k3  query_fulllabel4k4
(+20 files in other folders)
